fixed delete being pushed off screen for small windows

--- a/src/apps/code-editor/src/app/components/FileActions/FileActions.less
+++ b/src/apps/code-editor/src/app/components/FileActions/FileActions.less
@@ -27,6 +27,10 @@
       display: flex;
       align-items: center;
 
+      span {
+        word-break: break-all;
+      }
+
       .ZUID {
         background: #333;
         border-radius: 2px;
